fix: center align heading in NotFound component and remove unnecessary class from button

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -195,9 +195,11 @@ body {
   justify-content: center;
   height: 100vh;
   gap: 1rem;
-
+  
   h1 {
     color: var(--s-color-content-default);
+        text-align: center;
+
   }
 
   p {
